crates/taut-rpc-macros/tests/ui/type-on-union-fail.stderr
error: taut_rpc: unions are not supported
         see SPEC §3.2
 --> tests/ui/type-on-union-fail.rs:4:1
  |
4 | union U {
  | ^^^^^
