crates/taut-rpc-macros/tests/ui/type-on-union-fail.rs
use taut_rpc::Type;

#[derive(Type)]
union U {
    a: u32,
    b: f32,
}

fn main() {}
